--- a/sysdata/tscsv/instr_contract_months.yaml
+++ b/sysdata/tscsv/instr_contract_months.yaml
@@ -1,8 +1,17 @@
 #YAML
 Instruments:
     CORN:
-        - F,H,K,N,U,X,Z
+        - ['F','H','K','N','U','X','Z']
     US10:
-        - H,M,U,Z
+        - ['H','M','U','Z']
     SP500:
-        - H,M,U,Z
+        - ['H','M','U','Z']
+
+CORN:
+    codes_traded: ['F','H','K','N','U','X','Z']
+    months_traded: ['01','03','05','07','09','11',12']
+    titles: ['January','March','May','July',September','November','December']
+    contract_dict: {'01':'03','02':'03','03':'05','04':'05','05':'07','06':'07','07':'09','08':'09','09':'11','10':'11','11':'12','12':'01'}
+    contract_year_offset: {'01':0,'02':0,'03':0,'04':0,'05':0,'06':0,'07':0,'08':0,'09':0,'10':0,'11':0,'12':1}
+    carry_dict: {'01':'05','02':'05','03':'07','04':'07','05':'09','06':'09','07':'11','08':'11','09':'12','10':'12','11':'01','12':'03'}
+    carry_year_offset: {'01':0,'02':0,'03':0,'04':0,'05':0,'06':0,'07':0,'08':0,'09':0,'10':0,'11':1,'12':1}
