--- a/sysdata/tscsv/instr_contract_months.yaml
+++ b/sysdata/tscsv/instr_contract_months.yaml
@@ -6,6 +6,8 @@ Instruments:
         - ['H','M','U','Z']
     SP500:
         - ['H','M','U','Z']
+    MXP:
+        - ['H','M','U','Z']
 
 CORN:
     codes_traded: ['F','H','K','N','U','X','Z']
@@ -26,6 +28,15 @@ US10:
     carry_year_offset: {'01':0,'02':0,'03':0,'04':0,'05':0,'06':0,'07':0,'08':0,'09':1,'10':1,'11':1,'12':1}
 
 SP500:
+    codes_traded: ['H','M','U','Z']
+    months_traded: ['03','06','09','12']
+    titles: ['March','June','September','December']
+    contract_dict: {'01':'03','02':'03','03':'06','04':'06','05':'06','06':'09','07':'09','08':'09','09':'12','10':'12','11':'12','12':'03'}
+    contract_year_offset: {'01':0,'02':0,'03':0,'04':0,'05':0,'06':0,'07':0,'08':0,'09':0,'10':0,'11':0,'12':1}
+    carry_dict: {'01':'06','02':'06','03':'09','04':'09','05':'09','06':'12','07':'12','08':'12','09':'03','10':'03','11':'03','12':'06'}
+    carry_year_offset: {'01':0,'02':0,'03':0,'04':0,'05':0,'06':0,'07':0,'08':0,'09':1,'10':1,'11':1,'12':1}
+
+MXP:
     codes_traded: ['H','M','U','Z']
     months_traded: ['03','06','09','12']
     titles: ['March','June','September','December']
