--- a/sysdata/tscsv/instr_contract_months.yaml
+++ b/sysdata/tscsv/instr_contract_months.yaml
@@ -44,3 +44,12 @@ MXP:
     contract_year_offset: {'01':0,'02':0,'03':0,'04':0,'05':0,'06':0,'07':0,'08':0,'09':0,'10':0,'11':0,'12':1}
     carry_dict: {'01':'06','02':'06','03':'09','04':'09','05':'09','06':'12','07':'12','08':'12','09':'03','10':'03','11':'03','12':'06'}
     carry_year_offset: {'01':0,'02':0,'03':0,'04':0,'05':0,'06':0,'07':0,'08':0,'09':1,'10':1,'11':1,'12':1}
+
+CRUDE_W:
+    codes_traded: ['F','G','H','J','K','M','N','Q','U','V','X','Z']
+    months_traded: ['01','02','03','04','05','06','07','08','09','10','11','12']
+    titles: ['January','February','March','April','May','June','July','August','September','October','November','December']
+    contract_dict: {'01':'02','02':'03','03':'04','04':'05','05':'06','06':'07','07':'08','08':'09','09':'10','10':'11','11':'12','12':'01'}
+    contract_year_offset: {'01':0,'02':0,'03':0,'04':0,'05':0,'06':0,'07':0,'08':0,'09':0,'10':0,'11':0,'12':1}
+    carry_dict: {'01':'03','02':'04','03':'05','04':'06','05':'07','06':'08','07':'09','08':'10','09':'11','10':'12','11':'01','12':'02'}
+    carry_year_offset: {'01':0,'02':0,'03':0,'04':0,'05':0,'06':0,'07':0,'08':0,'09':1,'10':0,'11':1,'12':1}
